<resources>
    <string name="app_name">"Portfolio"</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="streamer">Spotify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="action_settings">Settings</string>
</resources>
